--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ html, body{
     height: 100%;
     padding: 0;
     margin: 0;
+    color: #fff;
 }
 
 a:hover{
@@ -79,6 +80,8 @@ a:hover{
 
 #mainContentContainer{
     padding: 10px 30px;
+    display: flex;
+    flex: 1;
 }
 
 #mastHeadContainer .searchBarContainer{
@@ -121,4 +124,12 @@ a:hover{
 #mastHeadContainer .searchBarContainer .searchButton img{
     height: 25px;
     width: 25px;
+}
+
+.column{
+    flex: 1;
+    background-color: #333333;
+    min-height: 300px;
+    padding: 20px;
+    box-shadow: #545454 0 1px 2px;
 }
