--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ html, body{
     padding: 0;
     margin: 0;
     color: #fff;
+    background: #1E1E1E;
 }
 
 a:hover{
@@ -79,9 +80,10 @@ a:hover{
 }
 
 #mainContentContainer{
-    padding: 10px 30px;
+    padding: 30px;
     display: flex;
-    flex: 1;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 #mastHeadContainer .searchBarContainer{
@@ -127,9 +129,275 @@ a:hover{
 }
 
 .column{
-    flex: 1;
+    flex-grow: 1;
     background-color: #333333;
     min-height: 300px;
     padding: 20px;
     box-shadow: #545454 0 1px 2px;
+}
+
+.modalColor{
+    color: #111;
+}
+
+.signInContainer{
+    background-color: #efefee;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1E1E1E;
+}
+
+.signInContainer .column .header img{
+    width: 100px;
+}
+
+.signInContainer .column{
+    flex-grow: 0;
+    width: 450px;
+    padding: 20px 35px;
+    max-height: 100%;
+    overflow: auto;
+}
+
+.signInContainer .column .header{
+    padding: 20px 0;
+}
+
+.signInContainer .column .header h3{
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+    padding-bottom: 0;
+    padding-top: 16px;
+}
+
+.signInContainer .column .header span{
+    font-size: 14px;
+}
+
+.signInContainer .column form{
+    display: flex;
+    flex-direction: column;
+}
+
+.signInContainer .column form input[type="text"],
+.signInContainer .column form input[type="email"],
+.signInContainer .column form input[type="password"]{
+    font-size: 14px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 1px solid #dedede;
+    background-color: transparent;
+    color: #fff;
+}
+
+.signInContainer .column form input[type="submit"]{
+    background: #4285f4;
+    color: #fff;
+    height: 36px;
+    width: 80px;
+    border: none;
+    border-radius: 3px;
+    font-weight: 500;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.signInMessage{
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff
+}
+
+.errorMessage{
+    color: #f00;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.watchLeftColumn{
+    flex: 70%;
+}
+
+.watchLeftColumn .videoPlayer{
+    width: 100%;
+}
+
+.sugestions{
+    flex: 30%;
+    height: 100%;
+    padding-left: 24px;
+}
+
+.videoInfo{
+    width: 100%;
+    padding: 20px 0 8px 0;
+}
+
+.videoInfo h1{
+    display: block;
+    overflow: hidden;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.videoInfo .bottomSection{
+    display: flex;
+}
+
+.videoInfo .bottomSection .viewCount{
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 16px;
+    flex: 1;
+}
+
+.videoInfo .bottomSection .controls{
+    flex: 1;
+    text-align: right;
+}
+
+.videoInfo .bottomSection .controls button{
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    /*color:  rgba(17, 17, 17, 0.4);*/
+    font-weight: 500;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.videoInfo .bottomSection .controls button img{
+    height: 20px;
+    width: 20px;
+    margin: 4px 8px 8px 8px;
+}
+
+.videoInfo .bottomSection .controls span{
+    color: #fff;
+}
+
+.secondaryInfo .topRow{
+    display: flex;
+    margin-bottom: 12px;
+}
+
+.profilePicture{
+    height: 100%;
+}
+
+.secondaryInfo .topRow .profilePicture{
+    margin-right: 16px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+.secondaryInfo .topRow .uploadInfo{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+}
+
+.secondaryInfo .topRow .uploadInfo .date{
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.secondaryInfo .descriptionContainer{
+    margin-left: 64px;
+    max-width: 615px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+}
+
+.secondaryInfo{
+    border-bottom: 2px solid #71037E;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.secondaryInfo .topRow .button{
+    padding: 6px 15px;
+    cursor: pointer;
+    font-weight: 500;
+    border-radius: 2px;
+    border: none;
+    font-size: 14px;
+}
+
+.secondaryInfo .topRow .subscribeButtonContainer,
+.secondaryInfo .topRow .editVideoButtonContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.secondaryInfo .topRow .uploadInfo .owner a{
+    font-size: 14px;
+    font-weight: 500;
+    color:  #fff;
+}
+
+.subscribeButtonContainer .subscribe {
+    background-color: #71037E;
+    color: #fff;
+}
+
+.subscribeButtonContainer .unsubscribe{
+    background-color: #e8b923;
+    color: #fff;
+}
+
+.editVideoButtonContainer .edit{
+    background-color: #226699;
+    color: #fff;
+}
+
+.commentSection .header{
+    margin-top: 24px;
+    margin-bottom: 32px;
+    display: flex;
+    flex-direction: column;
+}
+
+.commentSection .header .commentForm .profilePicture{
+    margin-right: 16px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+}
+
+.commentSection .header .commentCount{
+    margin-bottom: 25px;
+}
+
+.commentSection .header .commentForm{
+    display: flex;
+}
+
+.commentSection .header .commentForm textarea{
+    flex: 1;
+    border: none;
+    background-color: transparent;
+    font-size: 14px;
+    color: #fff;
+    resize: none;
+}
+
+.commentSection .header .commentForm .postComment{
+    height: 36px;
+    background-color: #71037E;
+    color: #fff;
+    font-weight: 500;
+    border: none;
+    padding: 0 15px;
+    border-radius: 2px;
 }
