--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,10 +80,13 @@ a:hover{
 }
 
 #mainContentContainer{
-    padding: 30px;
+    padding: 10px 30px;
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
+    /*flex-wrap: wrap;*/
+    flex: 1;
+    /*width: 100%;*/
+    box-sizing: border-box;
+    background-color:#1E1E1E;
 }
 
 #mastHeadContainer .searchBarContainer{
@@ -368,7 +371,9 @@ a:hover{
     flex-direction: column;
 }
 
-.commentSection .header .commentForm .profilePicture{
+.commentSection .header .commentForm .profilePicture,
+.commentSection .comment .profilePicture,
+.commentForm .profilePicture{
     margin-right: 16px;
     width: 48px;
     height: 48px;
@@ -379,11 +384,13 @@ a:hover{
     margin-bottom: 25px;
 }
 
-.commentSection .header .commentForm{
+.commentSection .header .commentForm,
+.itemContainer .commentForm{
     display: flex;
 }
 
-.commentSection .header .commentForm textarea{
+.commentSection .header .commentForm textarea,
+.itemContainer .commentForm textarea{
     flex: 1;
     border: none;
     background-color: transparent;
@@ -392,7 +399,13 @@ a:hover{
     resize: none;
 }
 
-.commentSection .header .commentForm .postComment{
+.itemContainer .commentForm textarea{
+    height: 30px;
+}
+
+.commentSection .header .commentForm .postComment,
+.itemContainer .commentForm .postComment,
+.itemContainer .commentForm .cancelComment{
     height: 36px;
     background-color: #71037E;
     color: #fff;
@@ -400,4 +413,91 @@ a:hover{
     border: none;
     padding: 0 15px;
     border-radius: 2px;
+}
+
+.itemContainer .commentForm .cancelComment{
+    background-color: transparent;
+    color: #fff;
+}
+
+.itemContainer .commentForm .cancelComment:hover{
+    color: #e8b923;
+}
+
+.commentSection .itemContainer{
+    margin-bottom: 16px;
+}
+
+.commentSection .comment{
+    display: flex;
+}
+
+.commentSection .commentHeader{
+    margin-bottom: 2px;
+}
+
+.commentSection .comment .username{
+    margin-right: 8px;
+    color: #fff;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.commentSection .comment .body{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.itemContainer .controls{
+    margin-left: 64px;
+}
+
+.itemContainer .controls button,
+.itemContainer .controls .likesCount{
+    height: 32px;
+    background-color: transparent;
+    border: none;
+    font-size: 13px;
+    font-weight: 500;
+    color: #e8b923;
+}
+
+.itemContainer .controls button{
+    cursor: pointer;
+}
+
+.itemContainer .controls .likesCount{
+    margin: 0 5px;
+}
+
+.itemContainer .controls button img{
+    height: 16px;
+}
+
+.itemContainer .commentForm .profilePicture{
+    width: 30px;
+    height: 30px;
+}
+
+.commentSection .comment .timestamp{
+    color: #e8b923;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 18px;
+}
+
+.hidden{
+    display: none !important;
+}
+
+.comments .repliesSection{
+    padding-left: 64px;
+    margin-top: 16px;
+}
+
+.commentSection .itemContainer .viewReplies{
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
 }
