--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ a:hover{
 #mastHeadContainer .searchBarContainer .searchBar{
     flex: 1;
     max-width: 600px;
-    color: #111;
+    color: #000;
     padding: 2px 6px;
     font-size: 14px;
     font-weight: 100;
@@ -114,6 +114,7 @@ a:hover{
     border-right: none;
     height: 32px;
     box-shadow: #eee 0px 1px 2px 0px inset;
+    border: none;
 }
 
 #mastHeadContainer .searchBarContainer .searchButton{
@@ -500,4 +501,145 @@ a:hover{
     cursor: pointer;
     font-size: 14px;
     font-weight: 500;
+}
+
+.videoGrid{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sugestions .videoGridItem{
+    display: flex;
+    height: auto;
+}
+
+.videoGridItem{
+    height: 200px;
+    margin-right: 4px;
+    margin-bottom: 24px;
+}
+
+.videoGridItem .thumbnail{
+    width: 210px;
+    height: 118px;
+    position: relative;
+}
+
+.videoGridItem .thumbnail img{
+    width: 100%;
+    height: 100%;
+}
+
+.videoGridItem .thumbnail .duration{
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    margin: 4px;
+    color: #fff;
+    background-color: rgba(17, 17, 17, 0.8);
+    opacity: 0.8;
+    padding: 2px 4px;
+    border-radius: 2px;
+    letter-spacing: 0.5px;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 12px;
+}
+
+.sugestions .videoGridItem .thumbnail{
+    margin-right: 8px;
+}
+
+.videoGridItem .details{
+    padding-right: 24px;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    width: 210px;
+}
+
+.sugestions .videoGridItem .details{
+    padding-right: 0;
+    flex: 1;
+}
+
+.videoGridItem .details .title{
+    margin: 8px 0;
+    min-height: 32px;
+    overflow: hidden;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    color: #fff;
+}
+
+.videoGridItem .details .title:hover{
+    color: #e8b923;
+}
+
+.videoGridItem .details .username,
+.videoGridItem .details .stats{
+    color: #fff;
+    font-size: 13px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.videoGridItem .details .username:hover,
+.videoGridItem .details .stats:hover{
+    color: #e8b923;
+}
+
+.videoGridHeader{
+    display: flex;
+    margin: 10px 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #71037E;
+}
+
+.videoGridHeader div{
+    flex: 1;
+}
+
+.videoGrid.large{
+    flex-direction: column;
+    flex: 1;
+}
+
+.videoGrid.large .videoGridItem{
+    height: auto;
+    display: flex;
+}
+
+.videoGrid.large .videoGridItem .thumbnail{
+    width: 266px;
+    height: 138px;
+    margin-right: 16px;
+}
+
+.videoGrid.large .videoGridItem .details{
+    max-width: 600px;
+}
+
+.videoGrid.large .videoGridItem .details .title{
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.videoGridItem .details .description{
+    color: #fff;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.videoGridItem .details .description:hover{
+    color: #e8b923;
+}
+
+.largeVideoGridContainer{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
